--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App.Starting"
+        android:theme="@style/Theme.JokerApp"
         tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.App.Starting"
+            android:theme="@style/Theme.JokerApp.Starting"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
